# complexity

./: CODEOWNERS  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/workflows/: dynamic-security.yml  release.yml
src/: cli.rs  complexity_score.rs  configuration.rs  files_filter.rs  flags.rs  lib.rs  main.rs  parsed_file.rs  parser.rs  scoring.rs
src/scoring/: length.rs  standard.rs
src/templates/: config.yml
