[package]
name = "complexity"
version = "0.1.0"
authors = ["Joshua Clayton <joshua.clayton@gmail.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ignore = "0.4"
nom = "6"
mimalloc = { version = "*", default-features = false }

[dev-dependencies]
approx = "0.4"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
