[package]
name = "complexity"
version = "0.4.2"
authors = ["Joshua Clayton <joshua.clayton@gmail.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ignore = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
serde_json = "1.0"
dirs-next = "2.0"
mimalloc = { version = "*", default-features = false, optional = true }
crossbeam-channel = "0.5"
num_cpus = "1.0"
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
approx = "0.4"
totems = "0.2"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
